src/App.css
/* ... */
.scroll-text--0, .scroll-text--10{
  top: 20%;
  left: 50%;
  transform: translateX(-50%);
  white-space: nowrap;
}

.scroll-text--0{
  color: white;
}

.scroll-text--1{
  display: block;
  top: 30%;
  right: 10%;
  color: white;
}



.scroll-text--2{
  bottom: 20%;
  left: 10%;
  width: 50%;
  color: white;
}

.scroll-text--3{
  top: 30%;
  right: 0%;
  width: 50%;
}

.scroll-text--4{
  bottom: 20%;
  right: 5%;
  width: 50%;
}

.scroll-text--5{
  top: 20%;
  left: 10%;
}

.scroll-text--6{
  bottom: 10%;
  left: 10%;
}

.scroll-text--7{
  top: 20%;
  left: 15%;
  width: 35%;
}

.scroll-text--8{
  top: 50%;
  right: 20%;
  width: 35%;
}

.scroll-text--9{
  bottom: 20%;
  left: 25%;
  width: 40%;
}


.word{
  text-wrap: nowrap;
  opacity: 0;
}

.word .word{
  opacity: inherit
}

.qr-code-container{
  pointer-events: none;
  width: 25%;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  opacity: 0;
  display: flex;
  flex-direction: column;
  place-items: center;
  gap: 20px
}

.qr-code-image{
  pointer-events: none;
}

.bg--1{
  width: 100%;
  background: linear-gradient(#1d1d1d,#1c1c1c,#1b1b1b,#1a1a1a, #000);
  height: 3000px;
}

.bg--transition{
  width: 100%;  
  background-color: #000;
  height: 3500px
}

.bg--2{
  width: 100%;;
  background-color: rgba(var(--combined-color), 0.7);
  height: 8000px;
}

.bg--3{
  width: 100%;;
  background-color: rgb(249, 159, 183);
  height: 15500px;
}

.disclaimer{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100%;
  background: linear-gradient(rgb(var(--saki-color)));
}

.disclaimer .dialog-box{
  --border-color: rgb(var(--combined-color));
  padding: 10%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}


.invitation-easter-egg{
  position: fixed;
  bottom: -15vw;
  width: 15vw;
  cursor: default;
}

.laser-div{
  position: fixed;
  top: 50%;
  left: 25%;
  transform: translate(0);
  width: 30vw;
  height: auto;
  aspect-ratio: 2/1;
}

#saki-laser{
  transform: scale(100) translate(-35%,-17.5%);
  right: 0;
  top: 50%;
  aspect-ratio: 1;
  opacity: 0;
}

#anon-laser{
  left: 100vw;
  top: 0%;
  transform: translateX(100%);
  opacity: 0;
}

#heart{
  position: absolute;
  left: 0%;
  top: 30%;
  width: 17.5%;
  rotate: 180deg;
}

/* larger screen */
@media screen and (min-width: 1920px){
  .relay-grid{
    grid-template-columns: 1fr 1fr 1fr 1fr;
    padding: 7% 15% 2% 15%;
  }
  /* .relay-grid::after{
    content: "";
    position: absolute;
    background-color: rgba(255, 255, 255, 0.445);
    z-index: 0;
    top: 12%;
    right: 15%;
    bottom: 2%;
    left: 15%;
    border: 2px solid rgb(var(--saki-color));
    border-radius: 20px; 
    pointer-events: none;
  } */
}

.polaroid-container{
  z-index: 1;
}

/* tablet design */
@media screen and (max-width: 1240px){
  .relay-grid{
    grid-template-columns: 1fr 1fr;
  }

  .drag-me-message{
    font-size: 1.5rem;
  }

}
/* ... */

